// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepareComponent with a component configured with allowLazy dispatches INIT_COMPONENT actions 1`] = `
Array [
  Object {
    "payload": Object {
      "complete": false,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
  Object {
    "payload": Object {
      "complete": true,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
]
`;

exports[`prepareComponent with a component that has a prepared and clientOnly action dispatches INIT_COMPONENT actions 1`] = `
Array [
  Object {
    "payload": Object {
      "complete": false,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
  Object {
    "payload": Object {
      "complete": true,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
]
`;

exports[`prepareComponent with a component wrapped in connect() dispatches INIT_COMPONENT actions 1`] = `
Array [
  Object {
    "payload": Object {
      "complete": false,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
  Object {
    "payload": Object {
      "complete": true,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
]
`;

exports[`prepareComponent with a custom getInitState dispatches INIT_COMPONENT actions 1`] = `
Array [
  Object {
    "payload": Object {
      "complete": false,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
  Object {
    "payload": Object {
      "complete": true,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent[]",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
]
`;

exports[`prepareComponent with a custom getPrepareKey dispatches INIT_COMPONENT actions with the correct prepareKey 1`] = `
Array [
  Object {
    "payload": Object {
      "complete": false,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent!foobar",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
  Object {
    "payload": Object {
      "complete": true,
      "isPrepare": true,
      "prepareKey": "SimpleInitTestComponent!foobar",
    },
    "type": "@@react-redux-component-init/INIT_COMPONENT",
  },
]
`;
